Fixes issue with viewport resizing caused by search box on mobile
Tweaks searchbox placement and positioning and adjusts it by device sizes using media queries.

--- a/css/styles.css
+++ b/css/styles.css
@@ -484,13 +484,26 @@ img {
 
 .mobile-search-box {
   margin: 0 10px;
+  position: absolute;
 }
 .mobile-search-box input {
+  z-index: 100;
   border-radius: 3px;
   height: 30px;
+  width: 150px;
   border: none;
   transform: translate3d(5%, 0, 0);
   opacity: 0%;
+}
+@media (min-width: 375px) and (max-width: 424px) {
+  .mobile-search-box input {
+    width: 200px;
+  }
+}
+@media (min-width: 425px) {
+  .mobile-search-box {
+    left: 120px;
+  }
 }
 
 .slideOut {
